Fix and test lecture deletion